--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -5,7 +5,7 @@ body {
   font-family: var(--font-family);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: var(--text-color);
+  //color: var(--text-color);
 }
 
 h1, h2, h3, h4 {
