--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -23,6 +23,11 @@
 .m-10 {
   margin: 10px;
 }
+
+.mr-10 {
+  margin-right: 10px;
+}
+
 .m-15 {
   margin-right: 15px;
 }
@@ -35,10 +40,23 @@
   margin-bottom: 20px;
 }
 
+.m-30 {
+  margin: 30px;
+}
+
+.mr-30 {
+  margin-right: 30px;
+}
+
 .my-30 {
   margin-bottom: 30px;
   margin-top: 30px;
 }
+
+.mr-60 {
+  margin-right: 60px;
+}
+
 
 .container {
   max-width: 1200px;
