--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,8 +1,9 @@
 :root {
-  --primary: #ff6348;
-  --gray-1: #20232A;
+  --primary: #FF6060;
+  --gray-1: #F6F6F6;
   --gray-2: #fefefe;
-  //--font-family: 'Montserrat', sans-serif;
+  --linear-gradient: linear-gradient(180deg, #FF6060 0%, rgba(0, 0, 0, 0.5) 100%);
+  --font-family: 'Montserrat', sans-serif;
   //--box-shadow: 0 6px 9px 0 rgb(0 0 0 / 15%);
   //--box-shadow-nav: rgb(0 0 0 / 22%) 0px 2px 18px 0px;
   --text-color: #444;
