--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -1,11 +1,22 @@
 .footer {
-  color: white;
-  font-size: 1.2rem;
-  padding: 35px 55px 45px 55px;
   //@include center;
+  color: white;
+  font-size: 0.8rem;
+  padding: 30px;
   background: black;
-display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  p {
+    padding-top: 0.6rem;
+  }
+
+
+  @media screen and (min-width: 992px){
+    font-size: 1rem;
+    padding: 45px 55px 45px 55px;
+  }
 }
+
