--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -22,6 +22,11 @@ ul {
   margin: 0;
 }
 
-a {
+a, a:visited, a:hover, a:active {
   text-decoration: none;
+  color: inherit;
+}
+
+p {
+  margin: inherit;
 }
