--- a/src/Components/Card/Card.module.scss
+++ b/src/Components/Card/Card.module.scss
@@ -3,11 +3,20 @@
   margin-bottom: 1.6rem;
   height: 240px;
   width: 100%;
-  //background: var(--linear-gradient);
   display: flex;
   align-items: flex-end;
   justify-content: flex-start;
   border-radius: 10px;
+
+  &::after {
+    display: block;
+    position: absolute;
+    background-image: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.896796218487395) 100%);
+    height: 240px;
+    width: 100%;
+    content: '';
+    border-radius: 10px;
+  }
 
   img {
     height: 240px;
@@ -15,7 +24,10 @@
     border-radius: 10px;
   }
 
+
+
 p {
+  z-index: 1;
   position: absolute;
   color: white;
   margin: 15px;
@@ -40,13 +52,8 @@ p {
     p {
       font-size: 1.4rem;
     }
-
-    //height: 450px;
-    // width: 450px;
-    //aspect-ratio:1/1;
   }
 
 }
 
 
-//TODO: Ameliorer le rendu des cartes
