--- a/src/Components/Collapse/Collapse.module.scss
+++ b/src/Components/Collapse/Collapse.module.scss
@@ -1,4 +1,5 @@
 .collapse {
+  width: 100%;
   font-size: 1rem;
   margin-bottom: 1rem;
   @media screen and (min-width: 768px) {
@@ -7,7 +8,6 @@
 }
 
 .upperSide {
-  //position: relative;
   padding: 0 1rem 0 1rem;
   cursor: pointer;
   height: 40px;
@@ -18,7 +18,6 @@
   color: white;
   border-radius: 5px;
   p {
-    //margin-left: 1rem;
     align-self: center;
   }
 }
@@ -29,8 +28,9 @@
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   background: var(--gray-1);
+
   @media screen and (min-width: 768px) {
-    padding: 1.4rem 1rem 0.8rem 1rem;
+    padding: 1.4rem 1rem 0.6rem 1rem;
   }
 
 
