--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -18,9 +18,14 @@
      display: flex;
      flex-direction: row;
 
+
      li:first-child {
        margin-right: 1rem;
+
      }
+      a:hover {
+        text-decoration: underline;
+      }
    }
 
   @media screen and (min-width: 768px) {
@@ -37,18 +42,14 @@
         margin-right: 2rem;
       }
     }
-
   }
   @media screen and (min-width: 992px) {
-    padding:2rem 3.5rem 2.5rem 3.5rem;
+    padding:2rem 8rem 2.5rem 8rem;
     text-transform: inherit;
    ul {
      font-size: 1.4rem;
    }
 
   }
-
-
 }
 
-// TODO: Trouver un moyen de souligner les liens avec le css
