--- a/src/Pages/Logement/Logement.module.scss
+++ b/src/Pages/Logement/Logement.module.scss
@@ -60,14 +60,14 @@ main {
 }
 
 .profileContainer {
-padding: 1rem 0;
-display: flex;
-align-items: center;
-  justify-content: space-between;
-
+  padding: 1rem 0;
+  display: flex;
+  align-items: center;
+justify-content: space-between;
   @media screen and (min-width: 992px) {
+    padding: 0;
     flex-direction: column-reverse;
-    gap: 0.4rem;
+    gap: 1rem;
   }
 }
 
