--- a/src/Components/Host/Host.module.scss
+++ b/src/Components/Host/Host.module.scss
@@ -2,12 +2,14 @@
   display: flex;
   align-items: center;
 
+
   p {
     font-size: 0.8rem;
     color: var(--primary);
     margin-right: 0.4rem;
     display: flex;
     width : min-content;
+
   }
 
   img {
@@ -31,6 +33,8 @@
 
   @media screen and (min-width: 992px) {
 
+    width: 100%;
+    justify-content: flex-end;
 
     p {
       font-size: 1.2rem;
